project single page, app.component to html, css

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!--app-root la selector trong file app.component.ts-->
+  <!--khi chay project, file index.html se duoc load len localhost:4200-->
+  <!--code cua index.html dua vao template app.component.html duoc chi dinh boi selector app-root-->
+  <!--tuong tu, code cua styles.css dua vao template app.component.css duoc chi dinh boi selector app-root-->
   <app-root></app-root>
 </body>
 </html>
